--- a/src/Spryker/Container/phpstan.neon
+++ b/src/Spryker/Container/phpstan.neon
@@ -4,6 +4,7 @@ parameters:
     ignoreErrors:
         - '#Result of || is always true.#'
         - '#Parameter #1 $obj of method SplObjectStorage::attach() expects object, Closure(mixed): mixed given.#'
+        - '#Parameter #1 $obj of method SplObjectStorage::attach() expects object, Closure(mixed): mixed given.#'
 
 services:
     -
