TE-635: Reverted changes of 'extra' section

--- a/src/Spryker/Silex/composer.json
+++ b/src/Spryker/Silex/composer.json
@@ -9,6 +9,11 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0.x-dev"
+    }
+  },
   "config": {
     "sort-packages": true
   }
