CR fix: - Added missing tags; - Added missing dependency; - Added missing PHP versions.

--- a/src/Spryker/QuoteApproval/composer.json
+++ b/src/Spryker/QuoteApproval/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": ">=7.1",
     "spryker/company-user": "^2.0.0",
-    "spryker/kernel": "^3.0.0",
+    "spryker/kernel": "^3.17.0",
+    "spryker/permission-extension": "^1.0.0",
     "spryker/quote": "^2.0.0"
   },
   "require-dev": {
