--- a/src/Spryker/PersistentCart/codeception.yml
+++ b/src/Spryker/PersistentCart/codeception.yml
@@ -1,7 +1,9 @@
 namespace: SprykerTest
 actor: Tester
+
 include:
     - tests/SprykerTest/Zed/PersistentCart
+
 paths:
     tests: tests
     log: tests/_output
@@ -16,6 +18,4 @@ settings:
     log: true
 coverage:
     enabled: true
-    whitelist:
-        include:
-            - 'src/*.php'
+    whitelist: { include: ['src/*.php'] }
