--- a/src/Spryker/SprykGui/composer.json
+++ b/src/Spryker/SprykGui/composer.json
@@ -5,12 +5,12 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
+    "spryker/config": "^3.1.3",
     "spryker/development": "^3.12.0",
     "spryker/graph": "^3.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/symfony": "^3.0.0",
-    "spryker/zend": "^2.0.0",
-    "spryker/config": "^3.1.3"
+    "spryker/zend": "^2.0.0"
   },
   "require-dev": {
     "spryker/application": "*",
