--- a/src/Spryker/CompanyUsersRestApi/composer.json
+++ b/src/Spryker/CompanyUsersRestApi/composer.json
@@ -5,15 +5,16 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
+    "spryker/company-user": "^2.1.0",
+    "spryker/glue-application": "^1.8.0",
+    "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.22.0",
     "spryker/oauth-customer-connector-extension": "1.0.0"
   },
   "require-dev": {
-    "spryker/business-on-behalf": "*",
     "spryker/code-sniffer": "*",
     "spryker/company": "*",
     "spryker/company-business-unit": "*",
-    "spryker/customer": "*",
     "spryker/propel": "*",
     "spryker/testify": "*"
   },
