TE-634 phpstan and test fix

--- a/src/Spryker/ApplicationExtension/composer.json
+++ b/src/Spryker/ApplicationExtension/composer.json
@@ -4,6 +4,7 @@
   "description": "ApplicationExtension module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
     "spryker/container": "^1.0.0"
   },
   "require-dev": {
@@ -13,11 +14,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
