--- a/src/Spryker/Container/composer.json
+++ b/src/Spryker/Container/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "spryker/container",
+  "type": "library",
   "description": "Container module",
   "license": "proprietary",
   "require": {
@@ -12,6 +13,11 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
