--- a/src/Spryker/Application/phpstan.neon
+++ b/src/Spryker/Application/phpstan.neon
@@ -4,4 +4,4 @@ parameters:
         - '#Call to an undefined method Silex\\Application::getTransferSession\(\).#'
         - '#Call to an undefined method object::setApplication\(\).#'
         - '#Call to an undefined method object::initialize\(\).#'
-        - '#Access to an undefined static property Spryker\Shared\ApplicationExtension\Provider\BootableServiceInterface::$runs.#'
+        - '#Access to an undefined property +.BootableServiceInterface::$runs.#'
