--- a/src/Spryker/SalesReclamationGui/composer.json
+++ b/src/Spryker/SalesReclamationGui/composer.json
@@ -10,7 +10,7 @@
     "spryker/oms": "^8.0.0",
     "spryker/sales": "^7.0.0 || ^8.0.0",
     "spryker/sales-extension": "^1.0.0",
-    "spryker/sales-reclamation": "^0.0.0 || ^1.0.0",
+    "spryker/sales-reclamation": "^1.0.0",
     "spryker/symfony": "^3.0.0",
     "spryker/util-date-time": "^1.0.0",
     "spryker/util-text": "^1.1.0"
