--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -4,7 +4,8 @@
   "description": "AvailabilityNotification module",
   "license": "proprietary",
   "require": {
-    "spryker/availability": "^1.0.0",
+    "php": ">=7.1",
+    "spryker/availability": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
