--- a/src/Spryker/CmsContentWidgetCmsBlockConnector/composer.json
+++ b/src/Spryker/CmsContentWidgetCmsBlockConnector/composer.json
@@ -11,7 +11,11 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/testify": "*"
+    "spryker/testify": "*",
+    "spryker/twig": "*"
+  },
+  "suggest": {
+    "spryker/twig": "If you want to use CmsBlockContentWidgetPlugin."
   },
   "autoload": {
     "psr-4": {
