--- a/src/Spryker/ProductListSearch/composer.json
+++ b/src/Spryker/ProductListSearch/composer.json
@@ -10,7 +10,7 @@
     "spryker/product": "^5.0.0 || ^6.0.0",
     "spryker/product-category": "^4.0.0",
     "spryker/product-list": "^1.2.0",
-    "spryker/product-page-search": "^2.2.0",
+    "spryker/product-page-search": "^2.2.0 || ^3.0.0",
     "spryker/product-page-search-extension": "^1.0.0"
   },
   "require-dev": {
