--- a/src/Spryker/SalesReclamation/composer.json
+++ b/src/Spryker/SalesReclamation/composer.json
@@ -6,15 +6,13 @@
   "require": {
     "php": ">=7.1",
     "spryker/kernel": "^3.0.0",
-    "spryker/propel-orm": "^1.0.0",
     "spryker/sales": "^7.0.0 || ^8.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/testify": "*"
   },
-  "suggest": {
-  },
+  "suggest": [],
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
