--- a/src/Spryker/ManualOrderEntryGuiExtension/composer.json
+++ b/src/Spryker/ManualOrderEntryGuiExtension/composer.json
@@ -8,12 +8,10 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/symfony": "^3.1.0",
     "spryker/testify": "*"
   },
   "suggest": {
-    "spryker/kernel": "^3.18.0",
-    "spryker/symfony": "^3.1.0"
+    "spryker/kernel": "^3.18.0"
   },
   "autoload": {
     "psr-4": {
