--- a/src/Spryker/Queue/composer.json
+++ b/src/Spryker/Queue/composer.json
@@ -9,7 +9,8 @@
     "spryker/kernel": "^3.0.0",
     "spryker/propel-orm": "^1.0.0",
     "spryker/symfony": "^3.0.0",
-    "spryker/transfer": "^3.0.0"
+    "spryker/transfer": "^3.0.0",
+    "spryker/util-encoding": "^2.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
