--- a/src/Spryker/Queue/composer.json
+++ b/src/Spryker/Queue/composer.json
@@ -13,6 +13,8 @@
     "spryker/util-encoding": "^2.0.0"
   },
   "require-dev": {
+    "spryker/application": "*",
+    "spryker/event": "*",
     "spryker/code-sniffer": "*",
     "spryker/propel": "*",
     "spryker/testify": "*"
