--- a/src/Spryker/ProductDiscontinuedRestApi/composer.json
+++ b/src/Spryker/ProductDiscontinuedRestApi/composer.json
@@ -5,12 +5,13 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/kernel": "^3.22.0",
+    "spryker/kernel": "^3.29.0",
     "spryker/product-discontinued-storage": "^1.0.0",
     "spryker/products-rest-api-extension": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
+    "spryker/glue-application": "*",
     "spryker/testify": "*"
   },
   "autoload": {
@@ -27,5 +28,8 @@
   },
   "config": {
     "sort-packages": true
+  },
+  "suggest": {
+    "spryker/glue-application": "If you want to use plugins with glue application."
   }
 }
