--- a/src/Spryker/Container/composer.json
+++ b/src/Spryker/Container/composer.json
@@ -12,6 +12,9 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
+    },
+    "psr-0": {
+      "Pimple": "src/"
     }
   },
   "minimum-stability": "dev",
