GLUE-1981 AA review edits

--- a/src/Spryker/CompanyRolesRestApi/composer.json
+++ b/src/Spryker/CompanyRolesRestApi/composer.json
@@ -4,7 +4,9 @@
   "description": "CompanyRolesRestApi module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "spryker/company-users-rest-api-extension": "^1.0.0",
+    "spryker/kernel": "^3.29.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
