--- a/src/Spryker/CompanyUsersRestApiExtension/composer.json
+++ b/src/Spryker/CompanyUsersRestApiExtension/composer.json
@@ -1,15 +1,10 @@
 {
-  "name": "spryker/company-users-rest-api",
+  "name": "spryker/company-users-rest-api-extension",
   "type": "library",
-  "description": "CompanyUsersRestApi module",
+  "description": "CompanyUsersRestApiExtension module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1",
-    "spryker/company-user": "^2.3.0",
-    "spryker/company-users-rest-api-extension": "^1.0.0",
-    "spryker/glue-application": "^1.9.0",
-    "spryker/glue-application-extension": "^1.0.0",
-    "spryker/kernel": "^3.29.0"
+    "php": ">=7.1"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
