--- a/src/Spryker/Uuid/composer.json
+++ b/src/Spryker/Uuid/composer.json
@@ -1,16 +1,16 @@
 {
-  "name": "spryker/util-uuid-generator",
+  "name": "spryker/uuid",
   "type": "library",
-  "description": "UtilUuidGenerator module",
+  "description": "Uuid module",
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
     "spryker/kernel": "^3.0.0",
-    "spryker/ramsey-uuid": "^1.0.0"
+    "spryker/propel-orm": "^1.0.0",
+    "spryker/symfony": "^3.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/propel": "*",
     "spryker/testify": "*"
   },
   "autoload": {
