--- a/src/Spryker/ProductDiscontinuedRestApi/composer.json
+++ b/src/Spryker/ProductDiscontinuedRestApi/composer.json
@@ -31,6 +31,6 @@
   },
   "suggest": {
     "spryker/glue-application": "If you want to use plugins with glue application.",
-    "spryker/products-rest-api": "If you want to provide plugins to ProductsRestApi module"
+    "spryker/products-rest-api": "If you want to use plugins with ProductsRestApi module."
   }
 }
