--- a/src/Spryker/CompanyUsersRestApi/composer.json
+++ b/src/Spryker/CompanyUsersRestApi/composer.json
@@ -9,7 +9,7 @@
     "spryker/glue-application": "^1.9.0",
     "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.22.0",
-    "spryker/oauth-customer-connector-extension": "1.0.0"
+    "spryker/oauth-customer-connector-extension": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
