--- a/src/Spryker/ProductDiscontinuedRestApi/composer.json
+++ b/src/Spryker/ProductDiscontinuedRestApi/composer.json
@@ -30,7 +30,7 @@
     "sort-packages": true
   },
   "suggest": {
-    "spryker/glue-application": "If you want to use plugins with glue application.",
+    "spryker/glue-application": "If you want to use RestRequestInterface.",
     "spryker/products-rest-api": "If you want to use plugins with ProductsRestApi module."
   }
 }
