--- a/src/Spryker/CompanyBusinessUnitsRestApiExtension/composer.json
+++ b/src/Spryker/CompanyBusinessUnitsRestApiExtension/composer.json
@@ -1,20 +1,14 @@
 {
-  "name": "spryker/company-business-units-rest-api",
+  "name": "spryker/company-business-units-rest-api-extension",
   "type": "library",
-  "description": "CompanyBusinessUnitsRestApi module",
+  "description": "CompanyBusinessUnitsRestApiExtension module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1",
-    "spryker/company-business-units-rest-api-extension": "^1.0.0",
-    "spryker/company-users-rest-api-extension": "^1.0.0",
-    "spryker/kernel": "^3.29.0"
+    "php": ">=7.1"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/testify": "*"
-  },
-  "suggest": {
-    "spryker/company-users-rest-api": "If you want to use this module."
   },
   "autoload": {
     "psr-4": {
