--- a/src/Spryker/Translator/composer.json
+++ b/src/Spryker/Translator/composer.json
@@ -12,7 +12,9 @@
     "spryker/code-sniffer": "*",
     "spryker/installer": "*",
     "spryker/propel": "*",
-    "spryker/testify": "*"
+    "spryker/testify": "*",
+    "spryker/messenger": "*",
+    "spryker/silex": "*"
   },
   "autoload": {
     "psr-4": {
@@ -35,6 +37,8 @@
     "sort-packages": true
   },
   "suggest": {
-    "spryker/installer": "If you want to use Installer plugins. Minimum required version: 4.0.1"
+    "spryker/installer": "If you want to use Installer plugins. Minimum required version: 4.0.1",
+    "spryker/messenger": "If you want to use ServiceProvider",
+    "spryker/silex": "If you want to use silex application for locale management"
   }
 }
