GLUE-1008 fixes for tests

--- a/src/Spryker/CompanyUsersRestApi/tests/SprykerTest/Zed/CompanyUsersRestApi/codeception.yml
+++ b/src/Spryker/CompanyUsersRestApi/tests/SprykerTest/Zed/CompanyUsersRestApi/codeception.yml
@@ -22,3 +22,7 @@ suites:
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Zed\Company\Helper\CompanyHelper
+                - \SprykerTest\Shared\Customer\Helper\CustomerDataHelper
+                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
+                - \SprykerTest\Shared\CompanyUser\Helper\CompanyUserHelper
