--- a/src/Spryker/CompanyUsersRestApi/composer.json
+++ b/src/Spryker/CompanyUsersRestApi/composer.json
@@ -14,6 +14,7 @@
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/company": "*",
+    "spryker/customer": "*",
     "spryker/propel": "*",
     "spryker/testify": "*"
   },
