--- a/src/Spryker/QuoteApproval/composer.json
+++ b/src/Spryker/QuoteApproval/composer.json
@@ -12,7 +12,8 @@
     "spryker/company-role": "^1.0.0",
     "spryker/messenger": "^3.0.0",
     "spryker/zed-request": "^3.0.0",
-    "spryker/quote-extension": "^1.0.0"
+    "spryker/quote-extension": "^1.0.0",
+    "spryker/permission": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
