PS-4362: implement proceed to checkout widget & plugins check functionality

--- a/src/Spryker/QuoteApproval/composer.json
+++ b/src/Spryker/QuoteApproval/composer.json
@@ -15,9 +15,13 @@
     "spryker/quote-extension": "^1.0.0",
     "spryker/permission": "^1.0.0"
   },
+  "suggest": {
+    "spryker/checkout": "^4.0.0"
+  },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/testify": "*"
+    "spryker/testify": "*",
+    "spryker/checkout": "^4.0.0"
   },
   "autoload": {
     "psr-4": {
