CC-581: Fixed dependency issues

--- a/src/Spryker/CmsExtension/composer.json
+++ b/src/Spryker/CmsExtension/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "spryker/cms-extension",
+  "type": "library",
   "description": "CmsExtension module",
   "license": "proprietary",
   "require": {
