--- a/src/Spryker/CompanyUsersRestApi/composer.json
+++ b/src/Spryker/CompanyUsersRestApi/composer.json
@@ -10,7 +10,8 @@
     "spryker/glue-application": "^1.9.0",
     "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.29.0",
-    "spryker/oauth-customer-connector-extension": "^1.0.0"
+    "spryker/oauth-customer-connector-extension": "^1.0.0",
+    "spryker/symfony": "^3.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
