PS-2940 fixed sniffer for composer.json

--- a/src/Spryker/SalesReclamationGui/composer.json
+++ b/src/Spryker/SalesReclamationGui/composer.json
@@ -19,8 +19,7 @@
     "spryker/code-sniffer": "*",
     "spryker/testify": "*"
   },
-  "suggest": {
-  },
+  "suggest": [],
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
