glue-1141 readme and changelog files fixes.

--- a/src/Spryker/UpSellingProductsRestApi/composer.json
+++ b/src/Spryker/UpSellingProductsRestApi/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "spryker/up-selling-products-rest-api",
   "type": "library",
-  "description": "RelatedProductsRestApi module",
+  "description": "UpSellingProductsRestApi module",
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
