--- a/src/Spryker/ShoppingListDataImport/tests/SprykerTest/Zed/ShoppingListDataImport/codeception.yml
+++ b/src/Spryker/ShoppingListDataImport/tests/SprykerTest/Zed/ShoppingListDataImport/codeception.yml
@@ -22,6 +22,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\ConfigHelper
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Shared\Testify\Helper\TableRelationsCleanupHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - \SprykerTest\Shared\Customer\Helper\CustomerDataHelper
