--- a/src/Spryker/QuickOrderExtension/composer.json
+++ b/src/Spryker/QuickOrderExtension/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "spryker/quick-order-extension",
+  "type": "library",
   "description": "QuickOrderExtension module",
   "license": "proprietary",
   "require": {
