TE-77: Reverted deleted methods. Added deprecations for them.

--- a/src/Spryker/ShoppingListDataImport/composer.json
+++ b/src/Spryker/ShoppingListDataImport/composer.json
@@ -18,6 +18,7 @@
     "spryker/company": "*",
     "spryker/permission": "*",
     "spryker/propel": "*",
+    "spryker/propel-orm": "*",
     "spryker/testify": "*"
   },
   "autoload": {
