--- a/src/Spryker/BusinessOnBehalfDataImport/composer.json
+++ b/src/Spryker/BusinessOnBehalfDataImport/composer.json
@@ -14,6 +14,7 @@
   },
   "require-dev": {
     "spryker/propel": "*",
+    "spryker/propel-orm": "*",
     "spryker/testify": "*"
   },
   "suggest": {
