--- a/src/Spryker/MultiCartDataImport/composer.json
+++ b/src/Spryker/MultiCartDataImport/composer.json
@@ -14,6 +14,7 @@
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/propel": "*",
+    "spryker/propel-orm": "*",
     "spryker/testify": "*"
   },
   "autoload": {
