--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -13,7 +13,8 @@
     "spryker/util-validate": "^1.0.0",
     "spryker/zed-request": "^3.0.0",
     "spryker/locale": "^3.0.0",
-    "spryker/store": "^1.5.0"
+    "spryker/store": "^1.5.0",
+    "spryker/money": "^2.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
