--- a/src/Spryker/Availability/composer.json
+++ b/src/Spryker/Availability/composer.json
@@ -5,6 +5,7 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
+    "spryker/event": "*",
     "spryker/kernel": "^3.0.0",
     "spryker/key-builder": "^1.0.0",
     "spryker/locale": "^3.0.0",
