--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -5,18 +5,26 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/availability": "^1.0.0",
+    "spryker/application": "*",
+    "spryker/config": "*",
     "spryker/customer": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
-    "spryker/mail": "^4.0.0",
-    "spryker/util-validate": "^1.0.0",
-    "spryker/zed-request": "^3.0.0",
     "spryker/locale": "^3.0.0",
-    "spryker/store": "^1.5.0"
+    "spryker/mail": "^4.0.0",
+    "spryker/price-product": "*",
+    "spryker/product": "*",
+    "spryker/propel-orm": "*",
+    "spryker/store": "^1.5.0",
+    "spryker/util-text": "*",
+    "spryker/util-validate": "^1.0.0",
+    "spryker/zed-request": "^3.0.0"
   },
   "require-dev": {
+    "spryker/availability": "*",
     "spryker/code-sniffer": "*",
+    "spryker/event": "*",
+    "spryker/propel": "*",
     "spryker/testify": "*"
   },
   "autoload": {
@@ -38,5 +46,9 @@
   },
   "config": {
     "sort-packages": true
+  },
+  "suggest": {
+    "spryker/availability": "ADD SUGGEST DESCRIPTION",
+    "spryker/event": "ADD SUGGEST DESCRIPTION"
   }
 }
