--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -5,26 +5,22 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/application": "*",
-    "spryker/config": "*",
+    "spryker/application": "^3.12.0",
+    "spryker/config": "^3.1.0",
     "spryker/customer": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
     "spryker/mail": "^4.0.0",
-    "spryker/price-product": "*",
-    "spryker/product": "*",
-    "spryker/propel-orm": "*",
+    "spryker/price-product": "^2.7.0",
+    "spryker/product": "^6.8.0",
     "spryker/store": "^1.5.0",
-    "spryker/util-text": "*",
+    "spryker/util-text": "^1.2.0",
     "spryker/util-validate": "^1.0.0",
     "spryker/zed-request": "^3.0.0"
   },
   "require-dev": {
-    "spryker/availability": "*",
     "spryker/code-sniffer": "*",
-    "spryker/event": "*",
-    "spryker/propel": "*",
     "spryker/testify": "*"
   },
   "autoload": {
