--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -5,6 +5,7 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
+    "spryker/availability": "^1.0.0",
     "spryker/customer": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
