--- a/src/Spryker/QuoteApproval/codeception.yml
+++ b/src/Spryker/QuoteApproval/codeception.yml
@@ -2,6 +2,7 @@ namespace: SprykerTest
 
 include:
     - tests/SprykerTest/Shared/QuoteApproval
+    - tests/SprykerTest/Zed/QuoteApproval
 
 paths:
     tests: tests
