--- a/src/Spryker/QuoteApproval/composer.json
+++ b/src/Spryker/QuoteApproval/composer.json
@@ -21,7 +21,10 @@
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/testify": "*",
-    "spryker/checkout": "^4.0.0"
+    "spryker/checkout": "^4.0.0",
+    "spryker/company": "^1.0.0",
+    "spryker/customer": "^7.0.0",
+    "spryker/propel": "*"
   },
   "autoload": {
     "psr-4": {
