--- a/src/Spryker/ProductDiscontinuedStorage/composer.json
+++ b/src/Spryker/ProductDiscontinuedStorage/composer.json
@@ -13,7 +13,8 @@
     "spryker/product-discontinued": "^1.0.0",
     "spryker/storage": "^3.4.0",
     "spryker/synchronization": "^1.0.0",
-    "spryker/synchronization-extension": "^1.0.0"
+    "spryker/synchronization-extension": "^1.0.0",
+    "spryker/quick-order-extension": "^1.1.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
