--- a/src/Spryker/ContentGuiExtension/composer.json
+++ b/src/Spryker/ContentGuiExtension/composer.json
@@ -1,12 +1,11 @@
 {
-  "name": "spryker/content-extension",
+  "name": "spryker/content-gui-extension",
   "type": "library",
-  "description": "ContentExtension module",
+  "description": "ContentGuiExtension module",
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/kernel": "^3.8.0",
-    "spryker/symfony": "^3.1.5"
+    "spryker/kernel": "^3.8.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
