--- a/src/Spryker/QuoteApproval/composer.json
+++ b/src/Spryker/QuoteApproval/composer.json
@@ -1,34 +1,40 @@
 {
   "name": "spryker/quote-approval",
+  "type": "library",
   "description": "QuoteApproval module",
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/company-user": "^2.0.0",
-    "spryker/kernel": "^3.17.0",
-    "spryker/permission-extension": "^1.0.0",
-    "spryker/quote": "^2.0.0",
     "spryker/cart": "^5.0.0",
     "spryker/company-role": "^1.0.0",
+    "spryker/company-user": "^2.0.0",
+    "spryker/kernel": "^3.17.0",
     "spryker/messenger": "^3.0.0",
-    "spryker/zed-request": "^3.0.0",
+    "spryker/permission": "^1.0.0",
+    "spryker/permission-extension": "^1.0.0",
+    "spryker/quote": "^2.0.0",
     "spryker/quote-extension": "^1.0.0",
-    "spryker/permission": "^1.0.0"
+    "spryker/zed-request": "^3.0.0"
+  },
+  "require-dev": {
+    "spryker/checkout": "^4.0.0",
+    "spryker/code-sniffer": "*",
+    "spryker/company": "^1.0.0",
+    "spryker/customer": "^7.0.0",
+    "spryker/propel": "*",
+    "spryker/testify": "*"
   },
   "suggest": {
     "spryker/checkout": "^4.0.0"
   },
-  "require-dev": {
-    "spryker/code-sniffer": "*",
-    "spryker/testify": "*",
-    "spryker/checkout": "^4.0.0",
-    "spryker/company": "^1.0.0",
-    "spryker/customer": "^7.0.0",
-    "spryker/propel": "*"
-  },
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
