PS-4362: fix unit tests

--- a/src/Spryker/QuoteApproval/tests/SprykerTest/Zed/QuoteApproval/codeception.yml
+++ b/src/Spryker/QuoteApproval/tests/SprykerTest/Zed/QuoteApproval/codeception.yml
@@ -26,5 +26,6 @@ suites:
                 - \SprykerTest\Shared\CompanyUser\Helper\CompanyUserHelper
                 - \SprykerTest\Zed\Company\Helper\CompanyHelper
                 - \SprykerTest\Shared\Quote\Helper\PersistentQuoteHelper
+                - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
 
 
