--- a/src/Spryker/ContentProductConnector/composer.json
+++ b/src/Spryker/ContentProductConnector/composer.json
@@ -7,6 +7,7 @@
     "php": ">=7.1",
     "spryker/kernel": "^3.8.0",
     "spryker/content-gui-extension": "^0.1.0",
+    "spryker/content-storage-extension": "^0.1.0",
     "spryker/symfony": "^3.1.5"
   },
   "require-dev": {
