--- a/src/Spryker/Container/composer.json
+++ b/src/Spryker/Container/composer.json
@@ -7,6 +7,7 @@
     "php": ">=7.1"
   },
   "require-dev": {
+    "psr/container": "^1.0",
     "spryker/code-sniffer": "*",
     "spryker/testify": "*"
   },
