--- a/src/Spryker/Container/composer.json
+++ b/src/Spryker/Container/composer.json
@@ -4,10 +4,10 @@
   "description": "Container module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "psr/container": "^1.0.0"
   },
   "require-dev": {
-    "psr/container": "^1.0",
     "spryker/code-sniffer": "*",
     "spryker/testify": "*"
   },
