--- a/src/Spryker/AvailabilityNotification/tests/SprykerTest/Zed/AvailabilityNotification/codeception.yml
+++ b/src/Spryker/AvailabilityNotification/tests/SprykerTest/Zed/AvailabilityNotification/codeception.yml
@@ -23,4 +23,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+                - \SprykerTest\Shared\Customer\Helper\CustomerDataHelper
+                - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Zed\AvailabilityNotification\Helper\AvailabilityNotificationDataHelper
+                - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
