CMS-84: CMS-86: Created test for Content Module

--- a/src/Spryker/Content/composer.json
+++ b/src/Spryker/Content/composer.json
@@ -10,7 +10,8 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/testify": "*"
+    "spryker/testify": "*",
+    "spryker/propel": "*"
   },
   "autoload": {
     "psr-4": {
