--- a/src/Spryker/CategoryGui/composer.json
+++ b/src/Spryker/CategoryGui/composer.json
@@ -4,13 +4,13 @@
   "description": "CategoryGui module",
   "license": "proprietary",
   "require": {
-    "spryker/category": "*",
-    "spryker/gui": "*",
-    "spryker/kernel": "*",
-    "spryker/locale": "*",
-    "spryker/propel-orm": "*",
-    "spryker/symfony": "*",
-    "spryker/util-text": "*"
+    "spryker/category": "^3.2.0 || ^4.0.0",
+    "spryker/gui": "^3.0.0",
+    "spryker/kernel": "^3.17.0",
+    "spryker/locale": "^3.0.0",
+    "spryker/propel-orm": "^1.0.0",
+    "spryker/symfony": "^3.0.0",
+    "spryker/util-text": "^1.1.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
