--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -8,6 +8,7 @@
     "spryker/application": "^3.2.0",
     "spryker/config": "^3.1.0",
     "spryker/customer": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
+    "spryker/customer-access-permission": "*",
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
@@ -17,9 +18,9 @@
     "spryker/store": "^1.5.0",
     "spryker/util-text": "^1.2.0",
     "spryker/util-validate": "^1.0.0",
-    "spryker/zed-request": "^3.0.0",
     "spryker/propel-orm": "^1.0.0",
-    "spryker/money": "^2.0.0"
+    "spryker/money": "^2.0.0",
+    "spryker/zed-request": "^3.0.0"
   },
   "require-dev": {
     "spryker/availability": "*",
