--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -8,7 +8,7 @@
     "spryker/application": "^3.2.0",
     "spryker/config": "^3.1.0",
     "spryker/customer": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
-    "spryker/customer-access-permission": "*",
+    "spryker/customer-access-permission": "^1.0.0",
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
