CC-2108: composer.json updated version for spryker/application package in require-dev.

--- a/src/Spryker/ProductAttributeGui/composer.json
+++ b/src/Spryker/ProductAttributeGui/composer.json
@@ -14,7 +14,7 @@
     "spryker/util-text": "^1.2.0"
   },
   "require-dev": {
-    "spryker/application": "^3.8.0",
+    "spryker/application": "*",
     "spryker/propel": "*",
     "spryker/testify": "*",
     "spryker/zed-navigation": "*"
