--- a/src/Spryker/ContentStorageExtension/composer.json
+++ b/src/Spryker/ContentStorageExtension/composer.json
@@ -4,8 +4,7 @@
   "description": "ContentStorageExtension module",
   "license": "proprietary",
   "require": {
-    "php": ">=7.1",
-    "spryker/kernel": "^3.0.0"
+    "php": ">=7.1"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
