--- a/src/Spryker/ContentBannersRestApi/composer.json
+++ b/src/Spryker/ContentBannersRestApi/composer.json
@@ -4,7 +4,7 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/content-storage": "*",
+    "spryker/content-storage": "^1.0.0",
     "spryker/glue-application": "^1.8.0",
     "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.22.0",
