PS-6638 moved ProductCategoryBusinessTester::assignProductToCategory()
to AssignHelper::assignProductToCategory()

--- a/src/Spryker/ProductCategory/tests/SprykerTest/Zed/ProductCategory/codeception.yml
+++ b/src/Spryker/ProductCategory/tests/SprykerTest/Zed/ProductCategory/codeception.yml
@@ -47,3 +47,4 @@ suites:
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Zed\Category\Helper\CategoryDataHelper
+                - \SprykerTest\Zed\ProductCategory\Helper\AssignHelper
