--- a/src/Spryker/PersistentCart/composer.json
+++ b/src/Spryker/PersistentCart/composer.json
@@ -14,7 +14,8 @@
     "spryker/price-extension": "^1.0.0",
     "spryker/quote": "^2.4.0",
     "spryker/store": "^1.9.0",
-    "spryker/zed-request": "^3.0.0"
+    "spryker/zed-request": "^3.0.0",
+    "spryker/calculation-extension": "^1.0.0"
   },
   "require-dev": {
     "spryker/propel": "*",
