--- a/src/Spryker/Pimple/composer.json
+++ b/src/Spryker/Pimple/composer.json
@@ -5,7 +5,7 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/container": "^1.1.2"
+    "spryker/container": "dev-beta/fix-package-version-missmatch as 1.1.2"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
