--- a/src/Spryker/Container/composer.json
+++ b/src/Spryker/Container/composer.json
@@ -35,7 +35,7 @@
     "sort-packages": true
   },
   "conflict": {
-    "spryker/pimple": "<2.0.1",
+    "spryker/pimple": "*",
     "pimple/pimple": "*",
     "silex/silex": "*"
   }
