CC-2596 Fix the stub URI for createQuoteWithReloadedItems

--- a/src/Spryker/PersistentCart/composer.json
+++ b/src/Spryker/PersistentCart/composer.json
@@ -17,6 +17,8 @@
     "spryker/zed-request": "^3.0.0"
   },
   "require-dev": {
+    "spryker/price-product": "*",
+    "spryker/product": "*",
     "spryker/propel": "*",
     "spryker/testify": "*"
   },
