--- a/src/Spryker/CategoryGui/composer.json
+++ b/src/Spryker/CategoryGui/composer.json
@@ -4,7 +4,7 @@
   "description": "CategoryGui module",
   "license": "proprietary",
   "require": {
-    "spryker/category": "^3.2.0 || ^4.0.0",
+    "spryker/category": "^4.0.0",
     "spryker/gui": "^3.0.0",
     "spryker/kernel": "^3.17.0",
     "spryker/locale": "^3.0.0",
