--- a/src/Spryker/CategoryGui/composer.json
+++ b/src/Spryker/CategoryGui/composer.json
@@ -4,6 +4,7 @@
   "description": "CategoryGui module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
     "spryker/category": "^4.0.0",
     "spryker/gui": "^3.0.0",
     "spryker/kernel": "^3.17.0",
@@ -19,11 +20,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
