CMS-177: CMS-178: create clear button for subform

--- a/src/Spryker/ContentGui/assets/Zed/package.json
+++ b/src/Spryker/ContentGui/assets/Zed/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "spryker-zed-content-product-gui",
+  "name": "spryker-zed-content-gui",
   "version": "1.0.0",
   "dependencies": {}
 }
