--- a/src/Spryker/Translator/codeception.yml
+++ b/src/Spryker/Translator/codeception.yml
@@ -1,19 +1,26 @@
-namespace: Translator
+namespace: SprykerTest
+
 actor: Tester
+
+include:
+  - tests/SprykerTest/Service/Translator
+
 paths:
-    tests: tests
-    log: tests/_output
-    data: tests/_data
-    support: tests/_support
-    envs: tests/_envs
+  tests: tests
+  log: tests/_output
+  data: tests/_data
+  support: tests/_support
+  envs: tests/_envs
+
 settings:
-    bootstrap: _bootstrap.php
-    suite_class: \PHPUnit_Framework_TestSuite
-    colors: true
-    memory_limit: 1024M
-    log: true
+  bootstrap: _bootstrap.php
+  suite_class: \PHPUnit_Framework_TestSuite
+  colors: true
+  memory_limit: 1024M
+  log: true
+
 coverage:
-    enabled: true
-    whitelist:
-        include:
-            - 'src/*.php'
+  enabled: true
+  whitelist:
+    include:
+      - 'src/*.php'
