--- a/src/Spryker/Translator/tests/SprykerTest/Service/Translator/codeception.yml
+++ b/src/Spryker/Translator/tests/SprykerTest/Service/Translator/codeception.yml
@@ -1,4 +1,4 @@
-namespace: SprykerTest\Zed\Translator
+namespace: SprykerTest\Service\Translator
 
 paths:
     tests: .
@@ -12,9 +12,9 @@ coverage:
     whitelist: { include: ['../../../../src/*'] }
 
 suites:
-    Business:
-        path: Business
-        class_name: TranslatorBusinessTester
+    Service:
+        path: .
+        class_name: TranslatorServiceTester
         modules:
             enabled:
                 - Asserts
@@ -22,4 +22,3 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\ConfigHelper
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
-                - \SprykerTest\Shared\Propel\Helper\TransactionHelper
