--- a/src/Spryker/AvailabilityNotification/composer.json
+++ b/src/Spryker/AvailabilityNotification/composer.json
@@ -7,13 +7,11 @@
     "php": ">=7.1",
     "spryker/application": "^3.2.0",
     "spryker/config": "^3.1.0",
-    "spryker/customer": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
+    "spryker/customer": "^7.16.1",
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
     "spryker/mail": "^4.0.0",
-    "spryker/money": "^2.0.0",
-    "spryker/price-product": "^2.7.0",
     "spryker/product": "^6.8.0",
     "spryker/propel-orm": "^1.0.0",
     "spryker/store": "^1.5.0",
@@ -24,6 +22,7 @@
   "require-dev": {
     "spryker/availability": "*",
     "spryker/code-sniffer": "*",
+    "spryker/customer": "*",
     "spryker/event": "*",
     "spryker/propel": "*",
     "spryker/testify": "*"
