--- a/src/Spryker/CompanyRolesRestApi/composer.json
+++ b/src/Spryker/CompanyRolesRestApi/composer.json
@@ -4,6 +4,7 @@
   "description": "CompanyRolesRestApi module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
     "spryker/glue-application": "^1.9.2",
     "spryker/glue-application-extension": "^1.1.1",
     "spryker/kernel": "^3.29.0",
@@ -22,11 +23,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
