--- a/src/Spryker/CompanyBusinessUnitsRestApi/composer.json
+++ b/src/Spryker/CompanyBusinessUnitsRestApi/composer.json
@@ -5,6 +5,7 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
+    "spryker/company-business-unit": "^2.7.0",
     "spryker/glue-application": "^1.11.0",
     "spryker/glue-application-extension": "^1.1.1",
     "spryker/kernel": "^3.29.0",
