PS-4358: fix unit tests

--- a/src/Spryker/QuoteApproval/tests/SprykerTest/Shared/QuoteApproval/codeception.yml
+++ b/src/Spryker/QuoteApproval/tests/SprykerTest/Shared/QuoteApproval/codeception.yml
@@ -13,5 +13,5 @@ coverage:
 
 suites:
     Shared:
-        path: Business
-        class_name: QuoteApprovalTester
+        path: .
+        class_name: QuoteApprovalSharedTester
