--- a/src/Spryker/QuoteApproval/tests/SprykerTest/Zed/QuoteApproval/codeception.yml
+++ b/src/Spryker/QuoteApproval/tests/SprykerTest/Zed/QuoteApproval/codeception.yml
@@ -12,7 +12,7 @@ coverage:
             - '../../../../src/*'
 suites:
     Business:
-        path: Business
+        path: .
         class_name: QuoteApprovalBusinessTester
         modules:
             enabled:
