--- a/src/Spryker/CompaniesRestApi/composer.json
+++ b/src/Spryker/CompaniesRestApi/composer.json
@@ -5,19 +5,19 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/company": "^1.1.3",
-    "spryker/glue-application": "^1.9.2",
-    "spryker/glue-application-extension": "^1.1.1",
+    "spryker/company": "^1.0.0",
+    "spryker/glue-application": "^1.14.0",
+    "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.29.0",
-    "spryker/symfony": "^3.0.0"
+    "spryker/symfony": "^3.0.0",
+    "spryker/uuid-behavior": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/testify": "*"
   },
   "suggest": {
-    "spryker/auth-rest-api": "If you want to authorize and authenticate customers via access tokens.",
-    "spryker/uuid-behavior": "Used to generate UUIDs for the company entities."
+    "spryker/auth-rest-api": "If you want to authorize and authenticate customers via access tokens."
   },
   "autoload": {
     "psr-4": {
