CC-248: CR fixes.

--- a/src/Spryker/Messenger/composer.json
+++ b/src/Spryker/Messenger/composer.json
@@ -13,8 +13,7 @@
     "spryker/silex": "*"
   },
   "suggest": {
-    "spryker/silex": "If you want to use ServiceProvider.",
-    "spryker/translator": "If you want to use Translator plugins."
+    "spryker/silex": "If you want to use ServiceProvider."
   },
   "autoload": {
     "psr-4": {
