--- a/src/Spryker/PersistentCart/composer.json
+++ b/src/Spryker/PersistentCart/composer.json
@@ -5,7 +5,7 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/calculation-extension": "^1.0.0"
+    "spryker/calculation-extension": "^1.0.0",
     "spryker/cart": "^5.0.0",
     "spryker/cart-extension": "^1.4.0 || ^2.0.0",
     "spryker/customer": "^6.0.0 || ^7.0.0",
