GLUE-3177: got rid of parent resource for company-business-units and company-roles resources

--- a/src/Spryker/CompanyBusinessUnitsRestApi/composer.json
+++ b/src/Spryker/CompanyBusinessUnitsRestApi/composer.json
@@ -17,8 +17,7 @@
     "spryker/testify": "*"
   },
   "suggest": {
-    "spryker/auth-rest-api": "If you want to authorize and authenticate customers via access tokens.",
-    "spryker/companies-rest-api": "If you want to add support of rest api endpoints for this module."
+    "spryker/auth-rest-api": "If you want to authorize and authenticate customers via access tokens."
   },
   "autoload": {
     "psr-4": {
