--- a/src/Spryker/ContentGui/composer.json
+++ b/src/Spryker/ContentGui/composer.json
@@ -12,7 +12,8 @@
     "spryker/symfony": "^3.2.0",
     "spryker/util-text": "^1.2.1",
     "spryker/util-date-time": "^1.0.2",
-    "spryker/locale": "^3.0.0"
+    "spryker/locale": "^3.0.0",
+    "spryker/util-encoding": "^2.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
