--- a/src/Spryker/ContentGui/composer.json
+++ b/src/Spryker/ContentGui/composer.json
@@ -9,11 +9,11 @@
     "spryker/content-gui-extension": "^1.0.0",
     "spryker/gui": "^3.16.0",
     "spryker/kernel": "^3.29.0",
-    "spryker/symfony": "^3.2.0",
-    "spryker/util-text": "^1.2.1",
-    "spryker/util-date-time": "^1.0.2",
     "spryker/locale": "^3.0.0",
-    "spryker/util-encoding": "^2.0.0"
+    "spryker/symfony": "^3.2.0",
+    "spryker/util-date-time": "^1.0.2",
+    "spryker/util-encoding": "^2.0.0",
+    "spryker/util-text": "^1.2.1"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
@@ -22,11 +22,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
