--- a/src/Spryker/ContentProduct/composer.json
+++ b/src/Spryker/ContentProduct/composer.json
@@ -5,8 +5,8 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.1",
-    "spryker/kernel": "^3.8.0",
-    "spryker/content-storage-extension": "^1.0.0"
+    "spryker/content-storage-extension": "^1.0.0",
+    "spryker/kernel": "^3.8.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
@@ -15,11 +15,6 @@
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
